// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bash set to false does not render $ sign 1`] = `
.c0 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c4:hover,
.c4:focus {
  background: #B29DFF;
}

.c4:active {
  background: #C5B6FF;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  display: flex;
}

<div>
  <div
    class="c0 c1"
    color="light"
  >
    <div
      class="c2 c3"
      style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
    >
      <div>
        some text to be copied
      </div>
    </div>
    <button
      class="c4"
      kind="primary"
      style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
    >
      Copy
    </button>
  </div>
</div>
`;

exports[`default, renders $ sign 1`] = `
.c0 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c5 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c5:hover,
.c5:focus {
  background: #B29DFF;
}

.c5:active {
  background: #C5B6FF;
}

.c5:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  display: flex;
}

<div>
  <div
    class="c0 c1"
    color="light"
  >
    <div
      class="c2 c3"
      style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
    >
      <div
        class="c4"
        style="user-select: none;"
      >
        $
      </div>
      <div>
        some bash command
      </div>
    </div>
    <button
      class="c5"
      kind="primary"
      style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
    >
      Copy
    </button>
  </div>
</div>
`;
